Fixed a z-index issue with the inner border of the main container

--- a/app/scss/_container.scss
+++ b/app/scss/_container.scss
@@ -10,7 +10,7 @@
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		z-index: 3;
+		// z-index: 3;
 		background: transparent;
 	}
 	
